<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="4dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_directory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/ripple_background"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/txt_directory"
            android:padding="4dp"
            android:layout_weight="0.15"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_action_directory" />

        <LinearLayout
            android:padding="4dp"
            android:layout_weight="0.85"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/txt_directory" />
            <TextView
                android:id="@+id/txt_directory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:text="@string/txt_not_selected" />
            <TextView
                android:id="@+id/txtChangerStatusInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:text="@string/txt_directory_info" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/ripple_background"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgStatus"
            android:contentDescription="@string/txt_permission"
            android:padding="4dp"
            android:layout_weight="0.15"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_action_permission" />

        <LinearLayout
            android:padding="4dp"
            android:layout_weight="0.85"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/txt_permission" />
            <TextView
                android:id="@+id/txt_permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="@color/red"
                android:text="@string/txt_permission_required" />
            <TextView
                android:id="@+id/txt_permission_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:text="@string/txt_permission_info_required" />

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:layout_margin="4dp"
        android:padding="8dp">
        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

</LinearLayout>