<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/layout_ringtone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">
        <ImageView
            android:src="@drawable/ic_action_ringtone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="12dp"
            android:contentDescription="@string/ringtones" />
        <TextView
            android:textSize="26sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:padding="12dp"
            android:text="@string/ringtones" />
        <ImageView
            android:src="@drawable/ic_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="12dp"
            android:contentDescription="@string/ringtones" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">
        <ImageView
            android:src="@drawable/ic_action_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="12dp"
            android:contentDescription="@string/notifications" />
        <TextView
            android:textSize="26sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:padding="12dp"
            android:text="@string/notifications" />
        <ImageView
            android:src="@drawable/ic_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="12dp"
            android:contentDescription="@string/notifications" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">
        <ImageView
            android:src="@drawable/ic_action_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="12dp"
            android:contentDescription="@string/alarms" />
        <TextView
            android:textSize="26sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:padding="12dp"
            android:text="@string/alarms" />
        <ImageView
            android:src="@drawable/ic_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="12dp"
            android:contentDescription="@string/alarms" />
    </LinearLayout>

</LinearLayout>